# structarrays

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/structarrays/: __init__.py  base.py  fields.py  utils.py
tests/: common.py  test_base.py  test_fields.py  test_structarray.py
